kubernetes/argo-cd/projects/aws/production-hm/ray-cluster/environments/production/kubernetes-manifests/hm-ray-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-ray-ingress
  namespace: production-hm-ray-cluster
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: ray.hongbomiao.com
  labels:
    app.kubernetes.io/name: ray
    app.kubernetes.io/part-of: production-hm-ray-cluster
spec:
  rules:
    - host: ray.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ray-cluster-head-svc
                port:
                  number: 8265
  tls:
    - hosts:
        - ray.hongbomiao.com
      secretName: hm-ray-certificate
